# EasyCaptcha-Python

./: .gitignore  INSTALL.md  MANIFEST.in  PROJECT_SUMMARY.md  README.md  README_zh.md  pyproject.toml  setup.py  verify_package.py
easy_captcha/: __init__.py  constants.py
easy_captcha/base/: __init__.py  arithmetic_captcha_abstract.py  captcha.py  chinese_captcha_abstract.py  randoms.py
easy_captcha/captcha/: __init__.py  arithmetic_captcha.py  chinese_captcha.py  chinese_gif_captcha.py  gif_captcha.py  spec_captcha.py
easy_captcha_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: all_types_demo.py  basic_usage.py
test_in_pip/: test.py
tests/: test_spec_captcha.py
